force-app/main/default/objects/Training_Session__c/fields/Num_of_Seats_Still_Open__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Seats_Still_Open__c</fullName>
    <formula>MAX(Total_Seats__c -  Seats_Taken__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num of Seats Still Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>