force-app/main/default/objects/Training_Session__c/fields/Seats_Taken__c.field-meta.xml
<CustomField>
    <fullName>Seats_Taken__c</fullName>
    <label>Seats Taken</label>
    <summaryFilterItems>
        <field>Training_Session_Attendee__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Training_Session_Attendee__c.Training_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>