force-app/main/default/objects/Training_Session__c/fields/Training_Organization__c.field-meta.xml
<CustomField>
    <fullName>Training_Organization__c</fullName>
    <formula>Training_Course__r.Training_Program__r.Training_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Organization</label>
    <type>Text</type>
</CustomField>