force-app/main/default/objects/Training_Session__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <formula>Training_Course__r.Training_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Program</label>
    <type>Text</type>
</CustomField>