force-app/main/default/objects/Training_Session__c/validationRules/Start_before_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_before_End</fullName>
    <active>true</active>
    <errorConditionFormula>Session_End_Time__c &lt;  Session_Start_Time__c</errorConditionFormula>
    <errorDisplayField>Session_End_Time__c</errorDisplayField>
    <errorMessage>No time travel allowed during trainings! Session Start Time must be before Session End Time.</errorMessage>
</ValidationRule>