force-app/main/default/objects/Training_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Seats__c</columns>
    <columns>Seats_Taken__c</columns>
    <columns>Training_Course__c</columns>
    <columns>Session_End_Time__c</columns>
    <columns>Total_Training_Hours_for_Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>